Added jwt configurations for authentication

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "FindALawyerContext": "Server=5CG95011NR;Database=FindALawyer;Trusted_Connection=True;MultipleActiveResultSets=true; Integrated Security = True; Encrypt=False"
+  },
+  "AppSettings": {
+    "JwtSecret": "SecretKey-For-FindALawyer"
   }
 }
