Added keys in appsettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,9 @@
   },
   "AppSettings": {
     "JwtSecret": "SecretKey-For-FindALawyer"
+  },
+  "PaymentSettings": {
+    "KEY": "rzp_test_6UuOyoPl4PFCdF",
+    "SECRET": "f9ceKqLXkVde7okrCAKeujrS"
   }
 }
