Added authorization for routes

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"FindALawyerContext": "Server=tcp:find-a-lawyer.database.windows.net,1433;Initial Catalog=find-a-lawyer;Persist Security Info=False;User ID=find-a-lawyer;Password=Admin@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-    "FindALawyerContext": "Server=5CG95011NR;Database=FindALawyer;Trusted_Connection=True;MultipleActiveResultSets=true; Integrated Security = True; Encrypt=False"
+    "FindALawyerContext": "Server=tcp:find-a-lawyer.database.windows.net,1433;Initial Catalog=find-a-lawyer;Persist Security Info=False;User ID=find-a-lawyer;Password=Admin@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    //"FindALawyerContext": "Server=5CG95011NR;Database=FindALawyer;Trusted_Connection=True;MultipleActiveResultSets=true; Integrated Security = True; Encrypt=False"
   },
   "AppSettings": {
     "JwtSecret": "SecretKey-For-FindALawyer"
